// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render a Menu with an add option and set the screen reader region to blank 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
/>
`;

exports[`Menu should render a Menu with no results and update the live region appropriately 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
>
  <NoResults
    key=".0"
    value="asdf"
  />
</ul>
`;

exports[`Menu should render a Menu with the clear option 1`] = `
<ul
  aria-activedescendant="terra-select-option-"
  className="menu"
  role="listbox"
  tabIndex="0"
>
  <ClearOption
    data-select-active={true}
    display="-Select-"
    id="terra-select-option-"
    isActive={true}
    isCheckable={false}
    isSelected={false}
    key=".0"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseUp={[Function]}
    value=""
  />
  <Option
    disabled={false}
    display="display"
    id="terra-select-option-value"
    isActive={false}
    isCheckable={false}
    isSelected={false}
    key=".$.0"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseUp={[Function]}
    value="value"
  />
</ul>
`;

exports[`Menu should render a default Menu 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
>
  <NoResults
    key=".0"
  />
</ul>
`;
